test/parse/module/bad-memory-max-size-negative.txt
;;; ERROR: 1
(module (memory 100 -5))
(;; STDERR ;;;
parse/module/bad-memory-max-size-negative.txt:2:21: syntax error, unexpected INT, expecting ( or )
(module (memory 100 -5))
                    ^^
;;; STDERR ;;)
